# ercot-demand-forecast

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
forecasting/: backtest.py  data.py  features.py  metrics.py  models.py
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_lightgbm.ipynb  04_chronos.ipynb  05_calibration.ipynb  06_comparison.ipynb
results/: calibration.json  scoreboard.json
